# httpcore

./: .coveragerc  .gitignore  .travis.yml  404.html  CHANGELOG.md  MANIFEST.in  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.in  requirements.txt  setup.cfg  setup.py  sitemap.xml  unasync.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  stale.yml
.github/ISSUE_TEMPLATE/: 1-issue.md  config.yml
.github/workflows/: publish.yml  test-suite.yml
async/: index.html
connection-pools/: index.html
connections/: index.html
docs/: api.md  async.md  conf.py  connection-pools.md  connections.md  contributing.md  exceptions.md  extensions.md  http2.md  index.md  logging.md  network-backends.md  proxies.md  quickstart.md  requests-responses-urls.md  table-of-contents.md
docs/locale/fr/LC_MESSAGES/: api.po  contributing.po  index.po
exceptions/: index.html
extensions/: index.html
http2/: index.html
httpcore/: CHANGELOG.md  __init__.py  _api.py  _bytestreams.py  _compat.py  _exceptions.py  _models.py  _synchronization.py  _threadlock.py  _trace.py  _types.py  _url.py  _utils.py
httpcore/_async/: __init__.py  base.py  connection.py  connection_pool.py  dispatch.py  http.py  http11.py  http2.py  http3.py  http_proxy.py  interfaces.py  socks_proxy.py
httpcore/_backends/: anyio.py  asyncio.py  auto.py  base.py  curio.py  mock.py  sync.py  trio.py
httpcore/_sync/: __init__.py  base.py  connection.py  connection_pool.py  dispatch.py  http.py  http11.py  http2.py  http3.py  http_proxy.py  interfaces.py  socks_proxy.py
httpcore/backends/: asyncio.py  auto.py  base.py  mock.py  sync.py  trio.py
logging/: index.html
network-backends/: index.html
proxies/: index.html
quickstart/: index.html
requests-responses-urls/: index.html
scripts/: benchmark  build  check  clean  coverage  docs  freeze  install  lint  publish  test  unasync  unasync.py
scripts/bench/: client.py  server.py
search/: search_index.json
table-of-contents/: index.html
tests/: concurrency.py  conftest.py  current_time.py  h2server.py  test_api.py  test_auto_backend.py  test_cancellations.py  test_exported_members.py  test_map_exceptions.py  test_models.py  test_socks.py  test_threadsafety.py  test_urls.py  test_utils.py  utils.py
tests/_async/: test_connection.py  test_connection_pool.py  test_http11.py  test_http2.py  test_http2_trailing_headers.py  test_http_proxy.py  test_integration.py  test_socks_proxy.py  test_timeouts.py
tests/_backends/: test_anyio.py  test_sync.py  test_trio.py
tests/_sync/: test_connection.py  test_connection_pool.py  test_http11.py  test_http2.py  test_http2_trailing_headers.py  test_http_proxy.py  test_integration.py  test_socks_proxy.py  test_timeouts.py
tests/async_tests/: test_connection_pool.py  test_http11.py  test_http2.py  test_interfaces.py  test_retries.py
tests/backend_tests/: test_asyncio.py
tests/benchmark/: client.py
tests/marks/: curio.py
tests/sync_tests/: test_connection_pool.py  test_http11.py  test_http2.py  test_interfaces.py  test_retries.py
