[build-system]
requires = ["hatchling", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[project]
name = "httpcore"
dynamic = ["readme", "version"]
description = "A minimal low-level HTTP client."
license = "BSD-3-Clause"
requires-python = ">=3.8"
authors = [
    { name = "Tom Christie", email = "tom@tomchristie.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Framework :: Trio",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "certifi",
    "h11>=0.13,<0.15",
]

[project.optional-dependencies]
http2 = [
    "h2>=3,<5",
]
socks = [
    "socksio==1.*",
]
trio = [
    "trio>=0.22.0,<0.24.0",
]
asyncio = [
    "anyio>=4.0,<5.0",
]

[project.urls]
Documentation = "https://www.encode.io/httpcore"
Homepage = "https://www.encode.io/httpcore/"
Source = "https://github.com/encode/httpcore"

[tool.hatch.version]
path = "httpcore/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/httpcore",
    "/CHANGELOG.md",
    "/README.md",
    "/tests"
]

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "CHANGELOG.md"

[tool.mypy]
strict = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "h2.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "hpack.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = ["-rxXs", "--strict-config", "--strict-markers"]
markers = ["copied_from(source, changes=None): mark test as copied from somewhere else, along with a description of changes made to accodomate e.g. our test setup"]
filterwarnings = ["error"]

[tool.coverage.run]
omit = [
    "venv/*", 
    "httpcore/_sync/*"
]
include = ["httpcore/*", "tests/*"]

[tool.ruff]
exclude = [
    "httpcore/_sync",
    "tests/_sync",
]
line-length = 88
select = [
    "E",
    "F",
    "W",
    "I"
]

[tool.ruff.pycodestyle]
max-line-length = 120

[tool.ruff.isort]
combine-as-imports = true
